# nutrition-platform

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  check_grok_models.py  check_grok_models_v2.py  delete_user.py  list_grok_models.py  pyproject.toml  run_backend.ps1  run_init_db.py  test_xai_models.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_admin_tables.py  003_add_products_table.py  004_add_user_history_favorites.py  443259ad8df3_fix_analytics_columns.py  578ef917c229_add_user_otp_consent_tables.py  f4d93f004d5c_add_user_otp_consent_quiz_tables.py  fc0f9c9a7643_add_ai_usage_tracking.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  affiliate.py  analytics.py  auth.py  commerce.py  config.py  dashboard.py  debug.py  ip_allowlist.py  mfa.py  postback.py  product.py  questionnaire.py  quiz.py  recommendation.py  report.py  review.py  user_history.py
backend/app/core/: auth_deps.py  celery_app.py  config.py  database.py  i18n.py  middleware.py  redis.py  responses.py  security.py
backend/app/middleware/: endpoint_limit.py  rate_limit.py  request_size.py
backend/app/models/: __init__.py  admin.py  analytics.py  commerce.py  config.py  otp.py  product.py  recommendation.py  review.py  usage.py  user.py  user_history.py
backend/app/services/: __init__.py  analytics.py  auth.py  commerce.py  config.py  consent_service.py  email_service.py  otp_service.py  prompt_injection_guard.py  questionnaire.py  recommendation.py  review.py  rule_engine.py  scoring_engine.py  security_compliance.py  usage_tracker.py
backend/app/tasks/: __init__.py
backend/scripts/: create_tables.sql  create_users.py  reset_database.sql
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  run_frontend.ps1  tailwind.config.ts  test-i18n.js
frontend/messages/: en.json  zh-TW.json
frontend/public/: robots.txt  site.webmanifest  sitemap.xml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/analytics/: page.tsx
frontend/src/app/admin/dashboard/: page.tsx
frontend/src/app/admin/login/: page.tsx
frontend/src/app/admin/products/: page.tsx
frontend/src/app/admin/products/pending/: page.tsx
frontend/src/app/admin/review/: page.tsx
frontend/src/app/favorites/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/history/[sessionId]/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/: FavoriteButton.tsx  HealthDataDisplay.tsx  LoginView.tsx  MainPageLanguageSwitcher.tsx
frontend/src/contexts/: LocaleContext.tsx
frontend/src/lib/: api.ts  seo.ts
frontend/src/lib/api/: admin.ts  config.ts
frontend/src/lib/store/: admin.ts
nginx/: nginx.conf  setup-ssl.sh
